testsuite/bsc.evaluator/uninit/UninitBitOK2.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling UninitBitOK2.bsv
code generation for sysUninitBitOK2 starts
Error: "UninitBitOK2.bsv", line 3, column 11: (G0028)
  `x[4]' uses uninitialized value (the position shown is the object's
  declaration). If this error is unexpected, please consult KPNS #32.
  During elaboration of the body of rule `test' at "UninitBitOK2.bsv", line 8,
  column 8.
  During elaboration of `sysUninitBitOK2' at "UninitBitOK2.bsv", line 2,
  column 8.
Error: "UninitBitOK2.bsv", line 3, column 11: (G0028)
  `x[0]' uses uninitialized value (the position shown is the object's
  declaration). If this error is unexpected, please consult KPNS #32.
  During elaboration of the body of rule `test' at "UninitBitOK2.bsv", line 8,
  column 8.
  During elaboration of `sysUninitBitOK2' at "UninitBitOK2.bsv", line 2,
  column 8.
